--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
     "react-wow": "^1.0.0",
     "web-vitals": "^1.0.1",
