--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
