--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-burger-menu": "^3.0.6",
     "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
