--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chroma-js": "^2.1.2",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-wow": "^1.0.0",
     "web-vitals": "^1.0.1",
