--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
-    "react-select": "^4.3.1",
+    "react-select": "^5.0.0",
     "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
+    "react-tooltip": "^4.2.21",
     "react-wow": "^1.0.0",
     "web-vitals": "^1.0.1",
     "wowjs": "^1.1.3"
