--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-select": "^5.0.0",
     "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
+    "react-tabs": "^3.2.2",
     "react-tooltip": "^4.2.21",
     "react-wow": "^1.0.0",
     "web-vitals": "^1.0.1",
