--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-collapse": "^5.1.0",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
