--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chroma-js": "^2.1.2",
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.2.0",
+    "postcss-normalize-charset-nightly": "^0.8.4",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-collapse": "^5.1.0",
