--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.2.0",
     "postcss-normalize-charset-nightly": "^0.8.4",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-collapse": "^5.1.0",
@@ -60,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rarible/protocol-ethereum-sdk": "^0.6.0"
   }
 }
