--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ethersproject/contracts": "^5.4.1",
     "@ethersproject/providers": "^5.4.5",
     "@ethersproject/units": "^5.4.0",
+    "@glidejs/glide": "^3.4.1",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,14 +18,16 @@
     "chroma-js": "^2.1.2",
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.2.0",
-    "postcss-normalize-charset-nightly": "^0.8.4",
     "node-sass": "^4.14.1",
+    "postcss-normalize-charset-nightly": "^0.8.4",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-collapse": "^5.1.0",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.2",
+    "react-glidejs": "^1.0.8",
     "react-google-login": "^5.2.2",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
@@ -35,6 +38,7 @@
     "react-tabs": "^3.2.2",
     "react-tooltip": "^4.2.21",
     "react-wow": "^1.0.0",
+    "swiper": "^6.0.2",
     "web-vitals": "^1.0.1",
     "wowjs": "^1.1.3"
   },
